objects/ssot__ActivityPlanSalesTerritory__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityPlanId__c</fullName>
        <label>Activity Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Activity Plan Sales Territory Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTerritoryId__c</fullName>
        <label>Sales Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800685791_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityPlanSalesTerritory_SalesTerr_rel</label>
        <referenceTo>ssot__SalesTerritory__dlm</referenceTo>
        <relationshipLabel>ActivityPlanSalesTerritory_SalesTerr_rel</relationshipLabel>
        <relationshipName>rel_1752800685791_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800687201_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActivityPlanSalesTerritory_ActivityP_rel</label>
        <referenceTo>ssot__ActivityPlan__dlm</referenceTo>
        <relationshipLabel>ActivityPlanSalesTerritory_ActivityP_rel</relationshipLabel>
        <relationshipName>rel_1752800687201_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>